--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       height: 600px;
       overflow: hidden;
       margin: 0px;
+      font-family: sans-serif;
+    font-size: 10pt;
     }
     ul {
       list-style-type: none;
