--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
  
   <div id="iframeContainer"></div>
   <div style="display: block;background-color: white;color: darkgray;position: absolute;bottom: 0px;height: 44px;width: 100%;text-align: center;"><a target="_blank" href="https://orangevalley.nl/" style="color:#5f5f5f!important">About OrangeValley</a></div>
-  <script type="module" src="action.js"></script>
+  <script type="module" src="https://cxodata.github.io/action.js"></script>
 </body>
 </html>
