--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T9NSTH9C');</script>
+<!-- End Google Tag Manager -->
   <style>
     body {
       width: 600px;
@@ -67,7 +74,12 @@
     }
   </style>
 </head>
-<body><header style="padding:8px;">
+<body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T9NSTH9C"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  <header style="padding:8px;">
   <a href="/" rel="home" class="site-logo">
     <img src="https://orangevalley.nl/themes/custom/orangevalley/logo.svg" alt="Home" style="height: 20px">
   </a><button id="changeURLButton" style="display:block;float:right;">Insert key</button>
