--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-T9NSTH9C');</script>
-  <!-- End Google Tag Manager -->
   <style>
     body {
       width: 600px;
@@ -121,6 +114,81 @@
  
   <div id="iframeContainer"></div>
   <div style="display: block;background-color: white;color: darkgray;position: absolute;bottom: 0px;height: 44px;width: 100%;text-align: center;"><a target="_blank" href="https://orangevalley.nl/" style="color:#5f5f5f!important">About OrangeValley</a></div>
+<script type="text/javascript">
+    // When the page loads, check if there's a saved URL
+    chrome.storage.sync.get('iframeURL', function (data) {
+      if (data.iframeURL) {
+        loadIframe(data.iframeURL);
 
+        // Hide the form and show the change URL button
+        document.getElementById('iframeForm').style.display = 'none';
+        document.getElementById('consenttagline').style.display = 'none';
+        document.getElementById('consent').style.display = 'none';
+        document.getElementById('changeURLButton').style.display = 'block';
+      }
+    });
+
+   // When the form is submitted, save the URL and load the iframe
+document.getElementById('iframeForm').addEventListener('submit', function (e) {
+  e.preventDefault();
+
+  var iframeURL = 'https://www.chatbase.co/chatbot-iframe/' + document.getElementById('iframeURL').value;
+  chrome.storage.sync.set({ iframeURL: iframeURL }, function () {
+    loadIframe(iframeURL);
+  });
+
+  // Hide the form and show the change URL button
+  document.getElementById('iframeForm').style.display = 'none';
+  document.getElementById('consenttagline').style.display = 'none';
+  document.getElementById('consent').style.display = 'none';
+  document.getElementById('changeURLButton').style.display = 'block';
+});
+
+    // When the change URL button is clicked, show the form and hide the button
+    document.getElementById('changeURLButton').addEventListener('click', function () {
+      document.getElementById('iframeForm').style.display = 'block';
+      document.getElementById('consenttagline').style.display = 'block';
+      document.getElementById('consent').style.display = 'block';
+      document.getElementById('changeURLButton').style.display = 'none';
+      document.getElementById('iframeContainer').style.display = 'none';
+    });
+
+    // Function to load the iframe
+    function loadIframe(iframeURL) {
+      var iframeContainer = document.getElementById('iframeContainer');
+
+      // Clear the container and create a new iframe
+      iframeContainer.innerHTML = '';
+      var iframe = document.createElement('iframe');
+      iframe.src = iframeURL;
+      iframe.style.width = '100%';
+      iframe.style.height = '100%';
+      iframe.style.overflow = 'hidden';
+      iframe.style.border = 'none';
+
+      // Add the iframe to the container and show the container
+      iframeContainer.appendChild(iframe);
+      iframeContainer.style.display = 'block';
+    }
+
+    // When the "Chat" button is clicked, load the iframe URL from storage
+    document.getElementById('chatButton').addEventListener('click', function () {
+      chrome.storage.sync.get('iframeURL', function (data) {
+        if (data.iframeURL) {
+          loadIframe(data.iframeURL);
+        }
+      });
+    });
+
+    // When the "CXO Dashboard" button is clicked, load the specified URL
+    document.getElementById('cxoDashboardButton').addEventListener('click', function () {
+      var iframeContainer = document.getElementById('iframeContainer');
+      var iframe = document.createElement('iframe');
+      iframe.src = 'https://lookerstudio.google.com/embed/reporting/bb0bcc0b-258e-4ddb-b760-588d3f6a4ad3/page/Zf6WD'; // Replace "https://new-url.com" with the desired URL
+      iframeContainer.innerHTML = '';
+      iframeContainer.appendChild(iframe);
+      iframeContainer.style.display = 'block';
+    });
+  </script>
 </body>
 </html>
