--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
  
   <div id="iframeContainer"></div>
   <div style="display: block;background-color: white;color: darkgray;position: absolute;bottom: 0px;height: 44px;width: 100%;text-align: center;"><a target="_blank" href="https://orangevalley.nl/" style="color:#5f5f5f!important">About OrangeValley</a></div>
-<script type="text/javascript">
+<script type="module" type="text/javascript">
     // When the page loads, check if there's a saved URL
     chrome.storage.sync.get('iframeURL', function (data) {
       if (data.iframeURL) {
