--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       background-color: #F6F6F6;
       min-height: 32px;
     }
+    li { display: contents;}
     li a {
       display: block;
       float: left;
@@ -68,7 +69,6 @@
   </style>
 </head>
 <body>
-
     <li><a target="_blank" class="disabled" href="https://ajax474005.monday.com/boards/3741554184/views/84784939">Planning</a></li>
     <li><a target="_blank" class="disabled" href="https://forms.monday.com/forms/049e7be6a10a964c2657182a5faa3077?r=use1">Upload new idea</a></li>
 </body>
