--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-color: #F6F6F6;
       min-height: 32px;
     }
-    menu li { display: contents !important;}
+    li { display: contents !important;}
     li a {
       display: block;
       float: left;
